<resources>
    <string name="app_name">Trabalho1</string>
    <string name="take_photo">Take Photo</string>
    <string name="textview">TextView</string>
    <string name="activity2">activity2</string>
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginbtn">LogIn</string>
    <string name="erro">Tente Novamente</string>
    <string name="username_error">Username is Invalid</string>
    <string name="password_error">Password is Invalid</string>
    <string name="books_list_error">Failed To fetch books</string>
    <string name="books_list_empty">There are no books to present</string>
    <string name="books_list_fail">we will come here later</string>
    <string name="autor">Autor</string>
    <string name="livro">Nome do livro</string>
    <string name="add_book">Add Book</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="title_activity_compose">ComposeActivity</string>


</resources>