<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="250dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

<EditText
    android:id="@+id/author"
    android:hint="@string/author_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/book"
        android:hint="@string/book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/addbook"
        android:hint="@string/add_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>